<resources>
    <string name="app_name">Where Is My Bus?</string>
    <string name="TrackingSwitch">Tracking</string>

    <string name="Longitude">Longitude</string>
    <string name="LongitudeInitalText">Disabled</string>

    <string name="Latitude">Latitude</string>
    <string name="LatitudeInitalText">Disabled</string>

    <string name="Velocity_Title">Velocity</string>
    <string name="VelocityInitalText">Disabled</string>

    <string name="search_label">Bus Route</string>
    <string name="search_hint">Search Bus Routes</string>


</resources>
