<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.trackmylocation.MainScreen">

    <Switch
        android:id="@+id/locationswitch"
        android:text="@string/TrackingSwitch"
        android:layout_width="match_parent"
        android:layout_height = "32dp"/>
    <TextView
        android:id="@+id/longitude_title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/locationswitch"
        android:text="Longitude"
        android:textStyle="bold"/>
    <TextView
        android:id = "@+id/longitude"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/LongitudeInitalText"
        android:layout_below="@+id/longitude_title"
        />
    <TextView
        android:id="@+id/latitude_title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/Latitude"
        android:layout_below="@+id/longitude"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/latitude_title"
        android:id="@+id/latitude"
        android:text="@string/LatitudeInitalText"
        />
    <TextView
        android:id="@+id/Velocity_title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/latitude"
        android:text="@string/Velocity_Title"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/velocity"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/Velocity_title"
        android:text="@string/VelocityInitalText"
        />
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/velocity"/>
</RelativeLayout>
